# anids

./: .gitattributes  .gitignore  README.md  pyproject.toml
anids/: capture.py  classifier.py  cli.py  csv_tail.py  display.py  flows.py  main.py  pipeline.py  results_writer.py
data/raw/: script.sh
data/raw/API/: API.csv  API.csv.gz.001  API.csv.gz.002
data/raw/Benign/: Benign.csv  Benign.csv.gz.001  Benign.csv.gz.002  Benign.csv.gz.003  Benign.csv.gz.004  Benign.csv.gz.005  Benign.csv.gz.006  Benign.csv.gz.007  Benign.csv.gz.008  Benign.csv.gz.009  Benign.csv.gz.010  Benign.csv.gz.011  Benign.csv.gz.012  Benign.csv.gz.013  Benign.csv.gz.014  Benign.csv.gz.015  Benign.csv.gz.016  Benign.csv.gz.017
data/raw/Bruteforce/: Bruteforce.csv
data/raw/BufferOverflow/: BufferOverflow.csv
data/raw/C2Beaconing/: C2Beaconing.csv
data/raw/DDoS/: DDoS.csv
data/raw/DNS/: DNS.csv
data/raw/DoS/: DoS.csv
data/raw/Evasion/: Evasion.csv
data/raw/Exfiltration/: Exfiltration.csv
data/raw/Exploitation/: Exploitation.csv
data/raw/MITM/: MITM.csv
data/raw/Slowloris/: Slowloris.csv
data/raw/TLSSSL/: TLSSSL.csv  TLSSSL.csv.gz.001  TLSSSL.csv.gz.002
data/raw/WebBased/: WebBased.csv  WebBased.csv.gz.001  WebBased.csv.gz.002
ml/data/processed/: test.csv  train.csv
ml/models/: expected_features.json  label_encoder.pkl
ml/notebooks/: 001_eda.ipynb  002_class_imbalance_check.ipynb  003_feature_selection.ipynb  004_train.ipynb
ml/utils/: cols_to_drop.json  config.py  train.py
ml/utils/data/: clean_merged.py  preprocess.py  splitter.py
scripts/: script.sh
