[project]
name = "anids"
version = "0.1.0"
description = "Aegis Network Intrusion Detection System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "typer>=0.27.0",
    "xgboost>=3.3.0",
]

[project.scripts]
anids="anids.cli:app"

[tool.setuptools.packages.find]
where=["."]
include=["anids*"]
exclude=["ml*"]
